footer done and fixed z-index on header in homePage

--- a/HomePage/homePage.scss
+++ b/HomePage/homePage.scss
@@ -11,7 +11,12 @@ header {
   position: relative;
   overflow-x: hidden;
   padding-bottom: 240px;
-  z-index: -10;
+  z-index: 1;
+}
+
+#white-box-section {
+  position: relative;
+  z-index: 2;
 }
 
 .background-text {
