--- a/reusableStyles/_footer.scss
+++ b/reusableStyles/_footer.scss
@@ -3,7 +3,7 @@ footer {
   padding-top: 25px;
   width: 100vw;
   min-height: 80vh;
-  padding-bottom: 100px;
+  padding-bottom: 40px;
   background: linear-gradient(160deg, rgb(11, 11, 167), rgb(43, 134, 145));
 
   .row {
@@ -49,5 +49,28 @@ footer {
     background-color: $veryDarkBlue;
     padding: 0 10px;
     margin-left: -1px;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .three-cols-footer {
+    .col {
+      background-color: rgba(46, 137, 149, 0.2);
+      padding: 40px 45px;
+    }
+
+    .col:nth-of-type(2) {
+      background-color: rgba(255, 255, 255, 0.16);
+    }
+
+    .three-cols-footer-smaller-text {
+      font-size: 18px;
+    }
+  }
+
+  .copyright-text {
+    margin-top: 120px;
   }
 }
